# dev-template

./: .dockerignore  .gitignore  Makefile  README.md  README.zh-CN.md
.devcontainer/: Dockerfile  devcontainer.json  post_create_command.sh  post_start_command.sh
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
api/app/: config.py  main.py
dev/: check  reformat  setup  start-api  start-docker-compose  start-web  stop-docker-compose  test
docker/: README.md  compose.middleware.yaml  compose.template.yaml  compose.yaml  env-sync.py  env-sync.sh  generate-compose
docker/envs/core-services/: api.env.example  shared.env.example
docker/envs/databases/: postgres.env.example  redis.env.example
web/: .gitignore  .npmrc  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
